tests/testdata/test/junit_multiple_test_files.junit.out
Check file:///[WILDCARD]/test/pass.ts
Check file:///[WILDCARD]/test/fail.ts
<?xml version="1.0" encoding="UTF-8"?>
<testsuites name="deno test" tests="26" failures="10" errors="0" time="[WILDCARD]">
    <testsuite name="./test/pass.ts" tests="16" disabled="0" errors="0" failures="0">
        <testcase name="test 0" classname="./test/pass.ts" time="[WILDCARD]" line="1" col="6">
        </testcase>
        <testcase name="test 1" classname="./test/pass.ts" time="[WILDCARD]" line="2" col="6">
        </testcase>
        <testcase name="test 2" classname="./test/pass.ts" time="[WILDCARD]" line="3" col="6">
        </testcase>
        <testcase name="test 3" classname="./test/pass.ts" time="[WILDCARD]" line="4" col="6">
        </testcase>
        <testcase name="test 4" classname="./test/pass.ts" time="[WILDCARD]" line="5" col="6">
        </testcase>
        <testcase name="test 5" classname="./test/pass.ts" time="[WILDCARD]" line="6" col="6">
        </testcase>
        <testcase name="test 6" classname="./test/pass.ts" time="[WILDCARD]" line="7" col="6">
        </testcase>
        <testcase name="test 7" classname="./test/pass.ts" time="[WILDCARD]" line="8" col="6">
        </testcase>
        <testcase name="test 8" classname="./test/pass.ts" time="[WILDCARD]" line="9" col="6">
        </testcase>
        <testcase name="test 9" classname="./test/pass.ts" time="[WILDCARD]" line="12" col="6">
        </testcase>
        <testcase name="test\b" classname="./test/pass.ts" time="[WILDCARD]" line="16" col="6">
        </testcase>
        <testcase name="test\f" classname="./test/pass.ts" time="[WILDCARD]" line="19" col="6">
        </testcase>
        <testcase name="test\t" classname="./test/pass.ts" time="[WILDCARD]" line="23" col="6">
        </testcase>
        <testcase name="test\n" classname="./test/pass.ts" time="[WILDCARD]" line="27" col="6">
        </testcase>
        <testcase name="test\r" classname="./test/pass.ts" time="[WILDCARD]" line="31" col="6">
        </testcase>
        <testcase name="test\v" classname="./test/pass.ts" time="[WILDCARD]" line="35" col="6">
        </testcase>
    </testsuite>
    <testsuite name="./test/fail.ts" tests="10" disabled="0" errors="0" failures="10">
        <testcase name="test 0" classname="./test/fail.ts" time="[WILDCARD]" line="1" col="6">
            <failure message="Uncaught Error">Error
  throw new Error();
        ^
    at file:///[WILDCARD]/test/fail.ts:2:9</failure>
        </testcase>
        <testcase name="test 1" classname="./test/fail.ts" time="[WILDCARD]" line="4" col="6">
            <failure message="Uncaught Error">Error
  throw new Error();
        ^
    at file:///[WILDCARD]/test/fail.ts:5:9</failure>
        </testcase>
        <testcase name="test 2" classname="./test/fail.ts" time="[WILDCARD]" line="7" col="6">
            <failure message="Uncaught Error">Error
  throw new Error();
        ^
    at file:///[WILDCARD]/test/fail.ts:8:9</failure>
        </testcase>
        <testcase name="test 3" classname="./test/fail.ts" time="[WILDCARD]" line="10" col="6">
            <failure message="Uncaught Error">Error
  throw new Error();
        ^
    at file:///[WILDCARD]/test/fail.ts:11:9</failure>
        </testcase>
        <testcase name="test 4" classname="./test/fail.ts" time="[WILDCARD]" line="13" col="6">
            <failure message="Uncaught Error">Error
  throw new Error();
        ^
    at file:///[WILDCARD]/test/fail.ts:14:9</failure>
        </testcase>
        <testcase name="test 5" classname="./test/fail.ts" time="[WILDCARD]" line="16" col="6">
            <failure message="Uncaught Error">Error
  throw new Error();
        ^
    at file:///[WILDCARD]/test/fail.ts:17:9</failure>
        </testcase>
        <testcase name="test 6" classname="./test/fail.ts" time="[WILDCARD]" line="19" col="6">
            <failure message="Uncaught Error">Error
  throw new Error();
        ^
    at file:///[WILDCARD]/test/fail.ts:20:9</failure>
        </testcase>
        <testcase name="test 7" classname="./test/fail.ts" time="[WILDCARD]" line="22" col="6">
            <failure message="Uncaught Error">Error
  throw new Error();
        ^
    at file:///[WILDCARD]/test/fail.ts:23:9</failure>
        </testcase>
        <testcase name="test 8" classname="./test/fail.ts" time="[WILDCARD]" line="25" col="6">
            <failure message="Uncaught Error">Error
  throw new Error();
        ^
    at file:///[WILDCARD]/test/fail.ts:26:9</failure>
        </testcase>
        <testcase name="test 9" classname="./test/fail.ts" time="[WILDCARD]" line="28" col="6">
            <failure message="Uncaught Error">Error
  throw new Error();
        ^
    at file:///[WILDCARD]/test/fail.ts:29:9</failure>
        </testcase>
    </testsuite>
</testsuites>
error: Test failed
